# metadynminer.py

./: .gitignore  404.html  README.md  index.html  meta.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  test.yml
docs/example/: tutorial.ipynb
docs/example/tutorial/: index.html
example/: comparison_test.ipynb
metadynminer/: __init__.py  fes.py  fes_profile.py  hills.py  minima.py  profile.py  string.py
reference/metadynminer/: index.html
reference/metadynminer/fes/: index.html
reference/metadynminer/hills/: index.html
reference/metadynminer/minima/: index.html
reference/metadynminer/profile/: index.html
search/: search_index.json
tests/: comparison_test.ipynb  test_fes.py  test_minima.py
